Fixed no gap between columns at 1240 break point on main section. Reduced min width on project cards slightly.

--- a/styles.css
+++ b/styles.css
@@ -447,13 +447,6 @@ h2 {
   .projects-container {
     grid-template-columns: minmax(305px, 500px);
     grid-template-rows: repeat(6, 200px);
-
-    /* .projects-container {
-      display: grid;
-      grid-template-columns: minmax(305px, 400px);
-      grid-template-rows: repeat(6, 130px);
-      gap: 10px 0;
-    } */
   }
 
   h1, h2 {
@@ -483,39 +476,6 @@ h2 {
     margin: 0 30px;
   } 
 
-  /* .card {
-    background-color: #ffffff;
-    height: 130px;
-    padding: 15px;
-    border-radius: 5px;
-    border-left: 5px solid var(--yellow-tulip-tree);
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-  } */
-  
-  /* .card-text > h3 {
-    margin-bottom: 5px;
-    font-size: 1rem;
-  }
-  
-  .card-text > p {
-    color: var(--grey-dove);
-    font-size: 0.8rem;
-  }
-  
-  .socials {
-    display: flex;
-    justify-content: flex-end;
-  }
-  
-  .socials > img {
-    height: 18px;
-  }
-  
-  .socials > img:nth-child(2) {
-    margin: 0 20px;
-  } */
   .announcements {
     grid-column: 2 / 3;
     grid-row: 1 / 2;
@@ -567,7 +527,7 @@ h2 {
   }
 
   .projects-container {
-    grid-template-columns: minmax(305px, 500px) minmax(305px, 500px);
+    grid-template-columns: minmax(290px, 500px) minmax(290px, 500px);
     gap: 30px 30px;
   }
 }
